--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,7 @@
 doctype html 
 html(lang= "ko")
     head 
-        title #{pageTitle} | Wetube
+        title #{pageTitle} | #{siteName}
         link(rel= "stylesheet" href= "https://unpkg.com/mvp.css")
     body 
         header 
@@ -10,7 +10,22 @@ html(lang= "ko")
         nav 
             ul 
                 li 
+                    a(href="/") Home
+                if loggedIn
+                    li 
+                        a(href="/logout") LogOut
+                    li 
+                        a(href="/my-profile") #{loggedInUser.name}의 Profile
+                else    
+                    li 
+                        a(href="/join") Join
+                    li 
+                        a(href="/login") Login
+                li 
                     a(href="/videos/upload") Upload Video
+                li 
+                    a(href="/search") Search
+                    
         main
         block content
     include partials/footer.pug
