--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -4,4 +4,6 @@ block content
     h4 Change Title of video
     form(method= "POST")
         input(name= "title", placeholder= "Video Title", value= video.title, required)
+        input(name= "description", placeholder= "Description",type= "text",minlength= 20, value= video.description, required)
+        input(required, type= "text", name= "hashtags", value= video.hashtags.join())
         input(value= "Save", type= "submit")
