--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,3 +3,5 @@ extends base.pug
 block content 
     h3 #{video.title} #{video.views === 1 ? "view" : "views"}
     a(href=`${video.id}/edit`) Edit Vieos &rarr;
+    br
+    a(href=`${video.id}/delete`) Delete Vieos &rarr;
