--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,16 +13,17 @@ html(lang= "ko")
                     a(href="/") Home
                 if loggedIn
                     li 
-                        a(href="/logout") LogOut
+                        a(href="/users/edit") Edit Profile
                     li 
-                        a(href="/my-profile") #{loggedInUser.name}의 Profile
+                        a(href="/users/logout") LogOut
+                    li 
+                        a(href="/videos/upload") Upload Video
                 else    
                     li 
                         a(href="/join") Join
                     li 
                         a(href="/login") Login
-                li 
-                    a(href="/videos/upload") Upload Video
+               
                 li 
                     a(href="/search") Search
                     
