--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,8 +3,10 @@ extends base.pug
 block content 
     if errorMessage 
         span=errorMessage
-    form(method= "POST")
+    form(method= "POST", enctype= "multipart/form-data")
+        label(for= "video") Video File
+        input(type= "file", accept= "video/*", required, id= "video", name="video")
         input(placeholder= "Title", required, type= "text", name ="title", maxlength= 80)
-        input(placeholder= "Description", required, type= "text", name ="description", minlength= 20)
+        input(placeholder= "Description", required, type= "text", name ="description", minlength= 3)
         input(placeholder= "Hashtags, separated by momma.", required, type= "text", name ="hashtags")
         input(type= "submit", value= "Upload Video") 
