--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,14 @@
 extends base.pug
 
 block content 
-    h3 #{video.title} #{video.views === 1 ? "view" : "views"}
-    a(href=`${video.id}/edit`) Edit Vieos &rarr;
-    br
-    a(href=`${video.id}/delete`) Delete Vieos &rarr;
+    video(src= "/" + video.fileUrl, controls, height= "400px", width= "400px")
+    div 
+        p= video.description
+        small= video.createdAt
+        br
+        small Uploaded by 
+            a(href= `/users/${video.owner_id}`)= video.owner.name
+    if String(video.owner._id) === String(loggedInUser._id)
+        a(href=`${video.id}/edit`) Edit Vieos &rarr;
+        br
+        a(href=`${video.id}/delete`) Delete Vieos &rarr;
