--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -10,10 +10,7 @@ block content
         input(type= "submit", value= "Login")
         br
         a(href="/users/github/start") Continue with Github &rarr;
-        br
-        a(href="https://github.com/login/oauth/authorize?client_id=7e9f42a4385f11d4724b") Git Address;
-
-    hr
-    div 
+        include partials/social-login
+    div.auth-switch
         span Don't have an account? 
         a(href="/join") Create one now &rarr;
