--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,8 +1,7 @@
 extends base.pug
 
 block content
-    img(src= "/" + loggedInUser.avatarUrl, width= "100", height= "100")
-    form(method="POST", enctype= "multipart/form-data")
+    form(method="POST", enctype="multipart/form-data").edit-profile__form
         label(for="avatar") Avatar
         input(type= "file", id= "avatar", name= "avatar", accept= "image/*")
         input(placeholder= "Name",name= "name", type = "text", required, value=loggedInUser.name)
@@ -11,6 +10,5 @@ block content
         input(placeholder= "Location",name= "location", type = "text", required= loggedInUser.location)
         input(type= "submit", value= "Update profile")
         if !loggedInUser.socialOnly
-            hr
-            a(href= "change-password") Change Password
-            
+            div.edit-profile__password
+                a(href="change-password") Change Password &rarr;
