--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,14 +1,32 @@
 extends base.pug
 
 block content 
-    video(src= "/" + video.fileUrl, controls, height= "400px", width= "400px")
-    div 
-        p= video.description
-        small= video.createdAt
-        br
-        small Uploaded by 
-            a(href= `/users/${video.owner_id}`)= video.owner.name
-    if String(video.owner._id) === String(loggedInUser._id)
-        a(href=`${video.id}/edit`) Edit Vieos &rarr;
-        br
-        a(href=`${video.id}/delete`) Delete Vieos &rarr;
+    div#videoContainer
+        video(src= "/" + video.fileUrl, controls)
+        div#videoControls
+            button#play Play 
+            button#mute Mute 
+            input(type="range", step= "0.1", value = 0.5, min= "0", max = "1")#volume
+
+            div
+                span#currenTime 00:00
+                sapn  /
+                span#totalTime 00:00
+            div
+                input(type="range", step= "1", value = 0.5, min= "0")#timeline
+            div 
+                button#fullScreen Enter Full Screen
+    //-
+        div 
+            p= video.description
+            small= video.createdAt
+            br
+            small Uploaded by 
+                a(href= `/users/${video.owner_id}`)= video.owner.name
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit Vieos &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete Vieos &rarr;
+
+ block scripts
+    scirpt(src= "/static/js/videoPlayer.js")
