--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,8 +5,13 @@ html(lang= "ko")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         link(rel= "stylesheet", href= "/static/css/styles.css")
     body 
+        if messages.error 
+            span=messages.error
+        if messages.info 
+            span=messages.info
         include partials/header
         main
             block content
         include partials/footer.pug
+    script(src="/static/js/main.js")
     block scripts
