--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,8 +1,8 @@
-extends base.pug
+extends base
 
-block content 
+block content
     div#videoContainer(data-id=video._id)
-        video(src= "/" + video.fileUrl)
+        video(src="/" + video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
                 span#play.videoControls__playBtn
@@ -16,19 +16,35 @@ block content
                 input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
                 span#mute
                     i.fas.fa-volume-up
+            div
                 span#fullScreen
                     i.fas.fa-expand
-    //-
-        div 
-            p= video.description
-            small= video.createdAt
-            br
-            small Uploaded by 
-                a(href= `/users/${video.owner_id}`)= video.owner.name
+
+    div.video__data
+        p.video__title=video.title
+        small.video__owner Uploaded by 
+            a(href=`/users/${video.owner._id}`)=video.owner.name
+        small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
         if String(video.owner._id) === String(loggedInUser._id)
-            a(href=`${video.id}/edit`) Edit Vieos &rarr;
+            a(href=`${video.id}/edit`) Edit Video &rarr;
             br
-            a(href=`${video.id}/delete`) Delete Vieos &rarr;
+            a(href=`${video.id}/delete`) Delete Video &rarr;
+    if loggedIn
+        div.video__comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write a commment")
+                button Add Comment
+    div.video__comments
+        ul
+            each comment in video.comments.reverse()
+                li.video__comment(data-id=comment.id)
+                    i.fas.fa-comment
+                    span | #{comment.text}
+                    if String(comment.owner) === String(loggedInUser._id)
+                        button#delete__Comment
+                            span ❌
 
 block scripts
-    script(src= "/static/js/videoPlayer.js")
+    script(src="/static/js/videoPlayer.js")
+    if loggedIn
+        script(src="/static/js/commentSection.js") 
